--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -79,7 +79,7 @@
         <div class="service-icon">{{ service.icon }}</div>
         <h3 class="service-title">{{ service.title }}</h3>
         <p class="service-description">{{ service.description }}</p>
-        <div class="service-rate">{{ service.rate }}</div>
+        <div class="service-duration">{{ service.duration }}</div>
       </div>
     </div>
   </div>
